# gentex

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tikz.rs
src/tikz/: circle.rs  line.rs  node.rs  point.rs  rectangle.rs
src/tikz/commands/: draw.rs
